test/cases/compile_errors/capture_by_ref_if_err_switch.zig
test {
    const e: error{A}!u32 = error.A;
    if (e) |*ptr| {} else |err| switch (err) {}
}

// error
// backend=stage2
// target=native
//
// :3:14: error: unused capture
